  similar notifications from completed background jobs no longer mess up the
  command line you're typing. Instead, the notification is inserted directly
  above the line you're typing, without affecting your command line display.

- Fixed a bug that caused the -b/--notify option to only notify on one job if
  more than one background job completed at the same time.

2022-07-21:

- Fixed a bug where a reproducible $RANDOM sequence (after assigning a
  specific value to $RANDOM) was influenced by running any external command.

- When an error occurs in a POSIX name() function or a dot script, the
  function or script name is now reported in the error message.

2022-07-14:

- Fixed a bug that caused a spurious "Done" message on the interactive shell
  when an external command was run as a foreground job from a SIGINT trap.

2022-07-12:

- The .sh.level variable can now only be changed within a DEBUG trap. When
  trap execution ends, the variable and the scope are now restored. These
  changes disallow an inconsistent shell scoping state causing instability.

2022-07-10:

- Fixed a potential crash on retrieving an empty line from the command history.

- Fixed a potential crash in the lexical analyser on processing single-byte
  characters with the highest bit set.

2022-07-09:

- Fixed a bug that broke '[[ ... ]]' test expressions for the command
  following a syntax error in an associative array assignment.

2022-07-05:

- Fixed a spurious syntax error on encountering a process substitution
  following a redirection without being an argument to a redirection.
  For example, this now writes 'OK' to standard error: cat >&2 <(echo OK)

- Fixed the detection of a syntax error in compound assignments to
  associative arays.

2022-07-02:

- Fixed a bug where, if the last command in a subshell was an external
  command that was terminated by a signal, the exit status ($?) of the
  subshell did not reflect this by adding 256 to the signal number.
